<resources>
    <string name="app_name">AndroidChatClient</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email_error">Email is incorrect</string>
    <string name="password_error">Password is incorrect</string>
    <string name="create">Create</string>
    <string name="created">Created</string>
    <string name="select_an_avatar">Select an avatar</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username_error">Username is incorrect</string>
    <string name="service_unavailable_message">Service unavailable</string>
    <string name="no_connection_message">No connection</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">Try again</string>
    <string name="server_error_message">Error. Please check your data.</string>
    <string name="search_chats_hint">Search chats</string>
    <string name="enter_a_message_chat_details">Enter a message</string>
    <string name="send">Send</string>
    <string name="file_selected">File selected</string>
    <string name="file">File</string>
    <string name="no_messages">No messages</string>
    <string name="message_is_empty">Message is empty</string>
    <string name="delete_chat">Delete chat</string>
    <string name="leave_chat">Leave chat</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="notifications_enabled">Notifications are enabled</string>
    <string name="notifications_disabled">Notifications are disabled</string>
    <string name="you_have_left_the_chat">You have left the chat</string>
    <string name="chat_is_deleted">Chat is deleted</string>
    <string name="user_created">User created</string>
    <string name="app_title">Chats</string>
    <string name="new_chat">New Chat</string>
    <string name="people">People</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="log_out">Log out</string>
    <string name="saved">Saved</string>
    <string name="start_new_chat">Start new chat</string>
    <string name="title">Title (for group)</string>
    <string name="user_email">User email</string>
    <string name="start">Start</string>
    <string name="add_member">Add member</string>
    <string name="added">Added</string>
    <string name="add">Add</string>
    <string name="ban_user">Ban User</string>
    <string name="you_are_banned">Sorry, you are banned!</string>
    <string name="ban">Ban</string>
    <string name="unban">Unban</string>
</resources>