<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/error_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceBody1"
        tools:text="@string/no_connection_message" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/try_again_button"
        android:text="@string/try_again"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/rounded_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:text="@string/login"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="@drawable/rounded_button" />
</LinearLayout>