<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_ban_user"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            style="@style/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout_ban_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ban_user"
            android:text="@string/ban"
            style="@style/wide_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_unban_user"
            android:text="@string/unban"
            style="@style/wide_button" />
    </LinearLayout>
</LinearLayout>