<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_new_chat"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            style="@style/toolbar" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="8dp"
            android:src="@drawable/ic_baseline_chat_24"
            android:tint="@color/teal_200" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textview_new_chat"
            android:layout_margin="32dp"
            android:text="@string/start_new_chat"
            android:textSize="32sp"
            style="@style/large_text_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_text_input_layout_new_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            app:startIconDrawable="@drawable/ic_baseline_title_24"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout_new_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_email"
            app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_new_chat"
            android:text="@string/start"
            style="@style/wide_button" />
    </LinearLayout>
</LinearLayout>