<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/fail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/message_text_view_chat_with_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody1"
            tools:text="@string/no_connection_message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/try_again_button_chat_with_messages"
            android:text="@string/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_chat_with_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_chat_with_messages"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:stackFromEnd="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="4dp"
            android:hint="@string/enter_a_message_chat_details"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enter_message_chat_with_messages"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/attach_file_chat_with_messages"
            android:src="@drawable/ic_baseline_attachment_24"
            style="@style/image_view_chat_details" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/send_button_chat_with_messages"
            android:src="@drawable/ic_baseline_send_24"
            style="@style/image_view_chat_details" />
    </LinearLayout>
</LinearLayout>